force-app/main/default/objects/PWChrono_Department__c/PWChrono_Department__c.object-meta.xml
<CustomObject>
    <label>Department</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>