force-app/main/default/objects/PWChrono_Department__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Head</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>PWChrono_Departments_Managed</relationshipName>
    <type>Lookup</type>
</CustomField>