force-app/main/default/objects/PWChrono_Department__c/fields/Parent_Department__c.field-meta.xml
<CustomField>
    <fullName>Parent_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>Sub Departments</relationshipLabel>
    <relationshipName>PWChrono_Sub_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>